# stars_site_back

./: .env.example  .gitignore  deploy.sh  ecosystem.config.js  guest_sessions_clear.md  manage.py  pyproject.toml  run_threads.py  start_admin.sh  start_backend.sh
.github/workflows/: deploy.yml
django_stars/django_stars/: asgi.py  settings.py  urls.py  wsgi.py
django_stars/stars_app/: admin.py  apps.py  models.py
fastapi_stars/: main.py  settings.py
fastapi_stars/api/: deps.py  merchants.py  routing.py
fastapi_stars/api/v1/: auth.py  info.py  order.py  users.py
fastapi_stars/auth/: jwt_utils.py  tonconnect.py
fastapi_stars/schemas/: auth.py  info.py  order.py  users.py
fastapi_stars/scripts/: init_django.py
fastapi_stars/utils/: prices.py  tc_messages.py
integrations/: gifts.py  telegram_bot.py
integrations/Currencies/: __init__.py  cbrf.py
integrations/Merchants/: models.py  utils.py
integrations/Merchants/Cardlink/: __init__.py  cardlink.py  fastapi.py
integrations/Merchants/CryptoPay/: __init__.py  cryptopay.py  fastapi.py
integrations/Merchants/FreeKassa/: __init__.py  fastapi.py  freekassa.py
integrations/Merchants/Heleket/: __init__.py  fastapi.py  heleket.py
integrations/fragment/: FragmentAPI.py  FragmentSession.py  __init__.py  toncenter.py  types.py
integrations/payments/: ton_deposit.py
integrations/utils/: check_day_orders.py  singleton.py
integrations/wallet/: __init__.py  helpers.py  main.py  types.py
integrations/workers/: __init__.py  gifts.py  notifiers.py  stars_sell.py  worker.py
(+3 files in other folders)
